<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.Nupco</groupId>
    <artifactId>INUPCO.Automation_API</artifactId>
    <version>1.0-SNAPSHOT</version>

    <properties>
        <shaft_engine.version>10.2.20260513</shaft_engine.version>
        <jdk.version>25</jdk.version>
        <aspectjweaver.version>1.9.25.1</aspectjweaver.version>
        <maven-compiler-plugin.version>3.15.0</maven-compiler-plugin.version>
        <maven-resources-plugin.version>3.5.0</maven-resources-plugin.version>
        <maven-surefire-plugin.version>3.5.5</maven-surefire-plugin.version>
        <surefire-testng.version>3.5.5</surefire-testng.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <surefireArgLine>--enable-native-access=ALL-UNNAMED -Dfile.encoding=UTF-8 -Dsun.jnu.encoding=UTF-8 -Dstdout.encoding=UTF-8 -Dstderr.encoding=UTF-8</surefireArgLine>
    </properties>

    <dependencies>
        <dependency>
            <groupId>io.github.shafthq</groupId>
            <artifactId>SHAFT_ENGINE</artifactId>
            <version>${shaft_engine.version}</version>
        </dependency>
        <dependency>
            <groupId>org.aspectj</groupId>
            <artifactId>aspectjweaver</artifactId>
            <version>${aspectjweaver.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${maven-compiler-plugin.version}</version>
                <configuration>
                    <release>${jdk.version}</release>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-resources-plugin</artifactId>
                <version>${maven-resources-plugin.version}</version>
                <configuration>
                    <encoding>${project.build.sourceEncoding}</encoding>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>testng</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <version>${maven-surefire-plugin.version}</version>
                        <dependencies>
                            <dependency>
                                <groupId>org.aspectj</groupId>
                                <artifactId>aspectjweaver</artifactId>
                                <version>${aspectjweaver.version}</version>
                            </dependency>
                            <dependency>
                                <groupId>org.apache.maven.surefire</groupId>
                                <artifactId>surefire-testng</artifactId>
                                <version>${surefire-testng.version}</version>
                            </dependency>
                        </dependencies>
                        <configuration>
                            <encoding>${project.build.sourceEncoding}</encoding>
                            <systemPropertyVariables>
                                <propertiesFolderPath>src/main/resources/properties</propertiesFolderPath>
                                <testng.dtd.http>true</testng.dtd.http>
                                <jacoco-agent.destfile>target/jacoco.exec</jacoco-agent.destfile>
                            </systemPropertyVariables>
                            <failIfNoSpecifiedTests>false</failIfNoSpecifiedTests>
                            <failIfNoTests>false</failIfNoTests>
                            <trimStackTrace>false</trimStackTrace>
                            <useFile>true</useFile>
                            <argLine>
                                @{argLine} ${surefireArgLine}
                                -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectjweaver.version}/aspectjweaver-${aspectjweaver.version}.jar"
                            </argLine>
                            <properties>
                                <property>
                                    <name>listener</name>
                                    <value>com.shaft.listeners.TestNGListener</value>
                                </property>
                                <property>
                                    <name>reporter</name>
                                    <value>org.testng.reporters.XMLReporter:generateTestResultAttributes=true,generateGroupsAttribute=true</value>
                                </property>
                            </properties>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
